<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.3</version>
		<relativePath/> <!-- lookup parent from repositories -->
	</parent>
	<groupId>com.ceiba</groupId>
	<artifactId>fashtoll</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>fashtoll</name>
	<description>Fashtoll Project by Ceiba</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>puj-course</sonar.organization>
		<sonar.projectKey>puj-course_FIS_2610_3513_G4</sonar.projectKey>
		<sonar.projectName>Fashtoll</sonar.projectName>
		<!-- Exclusiones de cobertura para centrarse solo en la lógica de negocio (Servicios) -->
		<sonar.coverage.exclusions>
			**/config/**,
			**/exceptionHandling/**,
			**/utilities/**,
			**/security/**,
			**/dtos/**,
			**/entity/**,
			**/entities/**,
			**/mappers/**,
			**/repositories/**,
			**/controllers/**,
			**/FashtollApplication.java,
			**/*Mapper.java,
			**/*Controller.java,
			**/*Repository.java,
			**/*DTO.java,
			**/*Dto.java,
			**/*Entity.java,
			**/*Config.java,
			**/*Exception.java,
			**/*_.java,
			**/User.java,
			**/Admin.java,
			**/Client.java,
			**/Brand.java,
			**/Tag.java,
			**/Wishlist.java,
			**/SearchToken.java,
			**/FrequenInfo.java,
			**/UserPreferences.java,
			**/RankingComponent.java,
			**/ProductDetails.java,
			**/ProductEvent.java,
			**/EventType.java
		</sonar.coverage.exclusions>
	</properties>
	<dependencies>

		<!-- DEPENDENCIAS DE SPRING FRAMEWORK -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-flyway</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-docker-compose</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-flyway-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- DEPENDENCIAS PARA LA BASE DE DATOS -->
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
			<version>6.5.2.Final</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>

		<!-- DEPENDENCIA DEL STEMMER DE ANALYZER -->
		<dependency>
			<groupId>com.github.rholder</groupId>
			<artifactId>snowball-stemmer</artifactId>
			<version>1.3.0.581.1</version>
			<scope>compile</scope>
		</dependency>

		<!-- DEPENDENCIAS DE SEGURIDAD -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.12.5</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.12.5</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.12.5</version>
			<scope>runtime</scope>
		</dependency>

		<!-- DEPENDENCIAS VARIAS -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>3.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.twilio.sdk</groupId>
			<artifactId>twilio</artifactId>
			<version>10.1.5</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<!-- El generador de Metamodelos de Hibernate-->
						<path>
							<groupId>org.hibernate.orm</groupId>
							<artifactId>hibernate-jpamodelgen</artifactId>
							<version>6.5.2.Final</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
					<parameters>true</parameters>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<configuration>
					<includes>
						<include>com/ceiba/fashtoll/**</include>
					</includes>
					<excludes>
						<exclude>**/config/**</exclude>
						<exclude>**/exceptionHandling/**</exclude>
						<exclude>**/utilities/**</exclude>
						<exclude>**/security/**</exclude>
						<exclude>**/dtos/**</exclude>
						<exclude>**/entity/**</exclude>
						<exclude>**/entities/**</exclude>
						<exclude>**/mappers/**</exclude>
						<exclude>**/repositories/**</exclude>
						<exclude>**/controllers/**</exclude>
						<exclude>**/FashtollApplication.class</exclude>
						<exclude>**/*Mapper.class</exclude>
						<exclude>**/*Controller.class</exclude>
						<exclude>**/*Repository.class</exclude>
						<exclude>**/*DTO.class</exclude>
						<exclude>**/*Dto.class</exclude>
						<exclude>**/*Entity.class</exclude>
						<exclude>**/*Config.class</exclude>
						<exclude>**/*Exception.class</exclude>
						<exclude>**/*_.class</exclude>
						<exclude>**/User.class</exclude>
						<exclude>**/Admin.class</exclude>
						<exclude>**/Client.class</exclude>
						<exclude>**/Brand.class</exclude>
						<exclude>**/Tag.class</exclude>
						<exclude>**/Wishlist.class</exclude>
						<exclude>**/SearchToken.class</exclude>
						<exclude>**/FrequenInfo.class</exclude>
						<exclude>**/UserPreferences.class</exclude>
						<exclude>**/RankingComponent.class</exclude>
						<exclude>**/ProductDetails.class</exclude>
						<exclude>**/ProductEvent.class</exclude>
						<exclude>**/EventType.class</exclude>
						<exclude>**/*MockitoMock*</exclude>
					</excludes>
				</configuration>

				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals><goal>prepare-agent</goal></goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals><goal>report</goal></goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
					<statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
						<disable>false</disable>
						<version>3.0</version>
						<usePhrasedFileName>false</usePhrasedFileName>
						<usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
						<usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
						<usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
					</statelessTestsetReporter>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<reportsDirectories>
						<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
					</reportsDirectories>
					<outputDirectory>${project.build.directory}/site</outputDirectory>
					<showSuccess>true</showSuccess>
				</configuration>
			</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.26.0</version>
					<configuration>
						<failOnViolation>false</failOnViolation>
						<printFailingErrors>true</printFailingErrors>
						<minimumTokens>50</minimumTokens>
						<linkXRef>false</linkXRef>
						<targetJdk>21</targetJdk>
						<excludes>
							<exclude>**/*_.java</exclude>
						</excludes>
					</configuration>
					<executions>
						<execution>
							<id>pmd-check</id>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
								<goal>cpd-check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		</plugins>
	</build>

</project>
